# xit.web

./: .gitignore  README.rst  pyproject.toml  tox.ini
docs/: .adr-dir
docs/source/: AUTHORS.rst  HISTORY.rst  adrs.rst  backlog.rst  conf.py  faqs.rst  index.rst
docs/source/adrs/: adr-0001-use-adrs.rst
docs/source/backlog/: backlog-0000-install.rst  backlog-0001-misc.rst
docs/source/history/: changes-0.1.0.rst
xit/web/: __init__.py
xit/web/dasher/: __init__.py  pages.py  tools.py
xit/web/flasker/: __init__.py  tools.py
