[tool.poetry]
name = "xit.web"
version = "0.1.0"
description = "Tools useful for web programming in general."
authors = ["Medardo Antonio Rodriguez"]
readme = "README.rst"
packages = [{include = "xit"}]
license = "GPL-3.0-or-later"
repository = "https://github.com/med-merchise/xit.web"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pygments = "^2.13.0"
xit = {path = "../xit", develop = true}
fastapi = {version = "^0.85.0", optional = true}
flask = {version = "^2.2.2", optional = true}


[tool.poetry.extras]
apis = [
    "fastapi",
]
pallets = [
    "flask",
]
all = [
    # apis
    "fastapi",
    # pallets
    "flask",
]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.5"
mypy = "^0.971"
ipdb = "^0.13.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
tox = "^3.25.0"
hypothesis = "^6.46.7"

[tool.poetry.group.docs.dependencies]
xit-books = {path = "../xit.books", extras = ["all"], develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | docs
  )/
  '''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["xit", "tests"]
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
