[tool.poetry]
name = "xit.web"
version = "0.1.0"
description = "Tools useful for web programming in general."
authors = ["Medardo Antonio Rodriguez"]
readme = "README.rst"
packages = [{include = "xit"}]
license = "GPL-3.0-or-later"
repository = "https://github.com/med-merchise/xit.web"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
pygments = "^2.13.0"
xit = {path = "../xit", develop = true}
fastapi = {version = "^0.85.0", optional = true}
flask = {version = "^2.2.2", optional = true}
flask-assets = {version = "^2.0", optional = true}
cssmin = {version = "^0.2.0", optional = true}
dash = {version = "^2.6.2", optional = true}
beautifulsoup4 = {version = "^4.11.1", optional = true}

[tool.poetry.extras]
apis = [
    "fastapi",
]
pallets = [
    "flask",
    "flask-assets",
    "cssmin",
    "beautifulsoup4",
]
dash = [
    "dash",
    "flask-assets",
    "cssmin",
    "beautifulsoup4",
]
all = [
    # apis
    "fastapi",
    # pallets
    "flask",
    # dash
    "dash",
    # pallets & dash
    "flask-assets",
    "cssmin",
    "beautifulsoup4",
]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.4"
mypy = "^0.982"
ipython = "^8.6.0"
ipdb = "^0.13.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
tox = "^3.26.0"
hypothesis = "^6.56.2"

[tool.poetry.group.docs.dependencies]
xit-books = {path = "../xit.books", extras = ["all"], develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | docs
  )/
  '''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["xit", "tests"]
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
